# ppt-master

./: .env.example  .gitignore  README.md  pyproject.toml
.agent/: settings.local.json
.agent/commands/: ppt-build-slide.md  ppt-build-template.md  ppt-build.md  ppt-generate-content.md  ppt-icons.md  ppt-list-slides.md  ppt-list-themes.md
data/icons/: manifest.json
docs/: AGENT_PPT_GUIDE.md  architecture.md
src/pptmaster/: __init__.py  __main__.py  config.py  mcp_server.py  models.py
src/pptmaster/analyzer/: __init__.py  icon_extractor.py  layout_extractor.py  potx_handler.py  shape_extractor.py  template_analyzer.py  theme_extractor.py
src/pptmaster/assets/: __init__.py  color_utils.py  icon_generator.py  icon_manager.py  image_handler.py  raster_icon_manager.py
src/pptmaster/builder/: __init__.py  ai_builder.py  design_system.py  helpers.py  icon_template_builder.py  template_builder.py  themes.py  ux_styles.py
src/pptmaster/builder/slides/: __init__.py  _chart_helpers.py  s01_cover.py  s02_toc.py  (+35 more)
src/pptmaster/chat/: __init__.py  loop.py  session.py  tools.py
src/pptmaster/cli/: __init__.py  app.py
src/pptmaster/composer/: __init__.py  chart_renderer.py  image_renderer.py  layout_matcher.py  shape_renderer.py  slide_composer.py  table_renderer.py  text_renderer.py  theme_applier.py
src/pptmaster/content/: __init__.py  builder_content_gen.py  content_engine.py  input_processor.py  llm_client.py  openai_client.py  prompt_builder.py  slide_planner.py
src/pptmaster/web/: __init__.py  streamlit_app.py
templates/: academic.pptx  ~$startup.pptx
